replace deprecated constructors